--- a/style.css
+++ b/style.css
@@ -955,6 +955,7 @@ p {
 }
 
 .how__item .white {
+  margin-top: -5%;
   font-weight: 800;
   font-size: 64px;
   line-height: 78px;
@@ -1187,7 +1188,7 @@ p {
   padding: 3% 200px 3%;
   position: relative;
   height: 100%;
-  min-height: 100vh;
+  min-height: 70vh;
 }
 
 .program p {
