--- a/style.css
+++ b/style.css
@@ -1461,30 +1461,50 @@ p {
   position: relative;
 }
 
-.vifnslb-element {
-  transform: translate3d(0, 0, 0);
+.team .slide2 {
   position: relative;
+  width: 100%;
   overflow: hidden;
-  animation-name: moveSlideshow;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  height: 110px;
   display: flex;
-  width: max-content;
-  min-width: 200%;
-  padding-bottom: 30px;
+  align-items: center;
+}
+
+.vifnslb-element {
+  position: absolute;
+  animation: scroll 20s infinite normal 0s linear;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 200vw;
+}
+@keyframes scroll {
+  0% {
+    transform: translate(100vw, 0);
+  }
+  100% {
+    transform: translate(-300vw, 0)
+  }
+}
+.vifnslb-element2 {
+  animation-delay: 10s;
+  transform: translate(100vw, 0);
 }
 
 .vifnslb-bar {
-  width: 50%;
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+.team-slide2{
+  width: max-content;
 }
 
 /**/
 .team {
   background: #343434;
   box-sizing: border-box;
-  padding: 3% 0 80px;
+  padding: 3% 0 0;
   position: relative;
   height: 100%;
 }
@@ -1612,8 +1632,8 @@ p {
 }
 
 .team-slide2 {
+  font-size: 45px;
   font-weight: 800;
-  font-size: 2rem;
   -webkit-text-stroke: 1px #ff7e00;
   text-stroke: 1px #ff7e00;
   box-sizing: border-box;
@@ -1624,19 +1644,31 @@ p {
 @media (max-width: 1023px) {
   .team-slide2 {
     font-weight: 600 !important;
-    font-size: 15px !important;
+    font-size: 30px;
+  }
+}
+@media (max-width: 670px) {
+  .team-slide2 {
+    font-weight: 600 !important;
+    font-size: 22px;
+  }
+}
+@media (max-width: 480px) {
+  .team-slide2 {
+    font-weight: 600 !important;
+    font-size: 18px;
+  }
+}
+@media (max-width: 350px) {
+  .team-slide2 {
+    font-weight: 600 !important;
+    font-size: 16px;
   }
 }
 
 
 
-.team .slide2 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: space-around;
-}
+
 
 @media (max-width: 1023px) {
   .team {
@@ -1848,11 +1880,7 @@ div#gadsf21g {
 }
 
 /*! CSS Used keyframes */
-@keyframes moveSlideshow {
-  100% {
-    transform: translateX(-50%);
-  }
-}
+
 
 /*! CSS Used fontfaces */
 @font-face {
