--- a/style.css
+++ b/style.css
@@ -955,7 +955,6 @@ p {
 }
 
 .how__item .white {
-  margin-top: -5%;
   font-weight: 800;
   font-size: 64px;
   line-height: 78px;
@@ -1052,7 +1051,9 @@ p {
   }
 }
 
-
+.slideshow {
+  padding-bottom: 200px;
+}
 
 .slideshow-arrow-prev.swiper-button-disabled,
 .slideshow-arrow-nexy.swiper-button-disabled {
@@ -1076,6 +1077,7 @@ p {
 @media (max-width: 1023px) {
   .slideshow {
     padding: 7% 20px 3% !important;
+    min-height: 70vh !important;
   }
 }
 
@@ -1188,7 +1190,7 @@ p {
   padding: 3% 200px 3%;
   position: relative;
   height: 100%;
-  min-height: 70vh;
+  min-height: 100vh;
 }
 
 .program p {
@@ -1237,7 +1239,7 @@ p {
 
 .program__menu-item div {
   max-height: 0;
-  transition: max-height 800ms ease-in-out;
+  transition: max-height .2s ease-in-out;
   overflow: hidden;
 }
 
@@ -1249,7 +1251,8 @@ p {
 
 @media (max-width: 1023px) {
   .program {
-    padding: 3% 20px 3%;
+    padding: 3% 20px 3% !important;
+    height: 100vh !important;
   }
 
   .program .white {
@@ -1269,9 +1272,9 @@ p {
   }
 
   .program__menu-item p {
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 22px;
+    font-weight: bold !important;
+    font-size: 18px !important;
+    line-height: 22px !important;
   }
 }
 
@@ -1337,7 +1340,7 @@ p {
 @media (max-width: 1023px) {
   .time {
     padding: 0;
-    height: 120vh;
+    height: 120vh !important;
   }
 
   .time-item {
@@ -1461,50 +1464,30 @@ p {
   position: relative;
 }
 
-.team .slide2 {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  height: 110px;
-  display: flex;
-  align-items: center;
-}
-
 .vifnslb-element {
-  position: absolute;
-  animation: scroll 20s infinite normal 0s linear;
+  transform: translate3d(0, 0, 0);
+  position: relative;
+  overflow: hidden;
+  animation-name: moveSlideshow;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 200vw;
-}
-@keyframes scroll {
-  0% {
-    transform: translate(100vw, 0);
-  }
-  100% {
-    transform: translate(-300vw, 0)
-  }
-}
-.vifnslb-element2 {
-  animation-delay: 10s;
-  transform: translate(100vw, 0);
+  width: max-content;
+  min-width: 200%;
+  padding-bottom: 30px;
 }
 
 .vifnslb-bar {
+  width: 50%;
   display: flex;
   justify-content: space-around;
-  width: 100%;
-}
-.team-slide2{
-  width: max-content;
 }
 
 /**/
 .team {
   background: #343434;
   box-sizing: border-box;
-  padding: 3% 0 0;
+  padding: 3% 0 80px;
   position: relative;
   height: 100%;
 }
@@ -1632,8 +1615,8 @@ p {
 }
 
 .team-slide2 {
-  font-size: 45px;
   font-weight: 800;
+  font-size: 2rem;
   -webkit-text-stroke: 1px #ff7e00;
   text-stroke: 1px #ff7e00;
   box-sizing: border-box;
@@ -1644,31 +1627,19 @@ p {
 @media (max-width: 1023px) {
   .team-slide2 {
     font-weight: 600 !important;
-    font-size: 30px;
-  }
-}
-@media (max-width: 670px) {
-  .team-slide2 {
-    font-weight: 600 !important;
-    font-size: 22px;
-  }
-}
-@media (max-width: 480px) {
-  .team-slide2 {
-    font-weight: 600 !important;
-    font-size: 18px;
-  }
-}
-@media (max-width: 350px) {
-  .team-slide2 {
-    font-weight: 600 !important;
-    font-size: 16px;
+    font-size: 15px !important;
   }
 }
 
 
 
-
+.team .slide2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+}
 
 @media (max-width: 1023px) {
   .team {
@@ -1880,7 +1851,11 @@ div#gadsf21g {
 }
 
 /*! CSS Used keyframes */
-
+@keyframes moveSlideshow {
+  100% {
+    transform: translateX(-50%);
+  }
+}
 
 /*! CSS Used fontfaces */
 @font-face {
@@ -2205,7 +2180,7 @@ div#gadsf21g {
   }
 
   .about .orange {
-    font-size: 24px;
+    font-size: 24px !important;
   }
 
   .whom__bottom__left .list-item .white {
@@ -2353,15 +2328,15 @@ div#gadsf21g {
     padding-bottom: 50px;
   }
 
-
-
-  .swiper-slide>img {
-    width: 100%;
+  .swiper-container:not(.hooper-list) {
+    overflow: hidden !important;
+    margin-left: -30px !important;
+    width: calc(100% + 60px);
   }
 
   .slideshow {
     height: auto;
-    min-height: auto;
+    min-height: auto !important;
     padding: 100px;
   }
 
@@ -2422,12 +2397,6 @@ div#gadsf21g {
   .team .arrows{
     padding-bottom: 10px;
   }
-  .team-slide div img{
-    width: 100% !important;
-  }
-  .team-slide div{
-    width: 100% !important;
-  }
   form{
     padding-bottom: 50px;
   }
@@ -2443,10 +2412,15 @@ div#gadsf21g {
 
   .feedback__profiles-video {
     max-width: 700px !important;
+    width: inherit !important;
   }
 
   .feedback__profiles-text {
     max-width: 700px !important;
+  }
+
+  .how {
+    padding-top: 320px !important;
   }
 
   .how h3 {
