--- a/style.css
+++ b/style.css
@@ -968,7 +968,7 @@ p {
   grid-column-gap: 10%;
 }
 
-.how__item .simpleParallax{
+.how__item .simpleParallax {
   width: 100%;
   min-width: 530px;
 
@@ -980,6 +980,7 @@ p {
 }
 
 .how__item .white {
+  margin-top: -5%;
   font-weight: 800;
   font-size: 64px;
   line-height: 78px;
@@ -1073,9 +1074,7 @@ p {
   }
 }
 
-.slideshow {
-  padding-bottom: 200px;
-}
+
 
 .slideshow-arrow-prev.swiper-button-disabled,
 .slideshow-arrow-nexy.swiper-button-disabled {
@@ -1099,7 +1098,6 @@ p {
 @media (max-width: 1023px) {
   .slideshow {
     padding: 7% 20px 3% !important;
-    min-height: 70vh !important;
   }
 }
 
@@ -1262,7 +1260,7 @@ p {
 
 .program__menu-item div {
   max-height: 0;
-  transition: max-height .2s ease-in-out;
+  transition: max-height 500ms ease-in-out;
   overflow: hidden;
 }
 
@@ -1274,8 +1272,7 @@ p {
 
 @media (max-width: 1023px) {
   .program {
-    padding: 3% 20px 3% !important;
-    height: 100vh !important;
+    padding: 3% 20px 3%;
   }
 
   .program .white {
@@ -1295,9 +1292,9 @@ p {
   }
 
   .program__menu-item p {
-    font-weight: bold !important;
-    font-size: 18px !important;
-    line-height: 22px !important;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
 
@@ -1348,15 +1345,17 @@ p {
   bottom: -5%;
   left: 2%;
 }
-.time .simpleParallax{
+
+.time .simpleParallax {
   position: absolute;
   top: 0;
   left: 40%;
   z-index: 0;
   width: 50%;
 }
+
 .time img {
- width: 100%;
+  width: 100%;
 }
 
 .first .container {
@@ -1366,7 +1365,7 @@ p {
 @media (max-width: 1023px) {
   .time {
     padding: 0;
-    height: 120vh !important;
+    height: 120vh;
   }
 
   .time-item {
@@ -1497,13 +1496,18 @@ p {
   position: relative;
 }
 
-.vifnslb-element {
-  transform: translate3d(0, 0, 0);
+.team .slide2 {
   position: relative;
+  width: 100%;
   overflow: hidden;
-  animation-name: moveSlideshow;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  height: 110px;
+  display: flex;
+  align-items: center;
+}
+
+.vifnslb-element {
+  position: absolute;
+  animation: scroll 20s infinite normal 0s linear;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1526,16 +1530,20 @@ p {
 }
 
 .vifnslb-bar {
-  width: 50%;
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+
+.team-slide2 {
+  width: max-content;
 }
 
 /**/
 .team {
   background: #343434;
   box-sizing: border-box;
-  padding: 3% 0 80px;
+  padding: 3% 0 0;
   position: relative;
   padding-top: 126px;
 
@@ -1668,8 +1676,8 @@ p {
 }
 
 .team-slide2 {
+  font-size: 45px;
   font-weight: 800;
-  font-size: 2rem;
   -webkit-text-stroke: 1px #ff7e00;
   text-stroke: 1px #ff7e00;
   box-sizing: border-box;
@@ -1680,19 +1688,34 @@ p {
 @media (max-width: 1023px) {
   .team-slide2 {
     font-weight: 600 !important;
-    font-size: 15px !important;
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 670px) {
+  .team-slide2 {
+    font-weight: 600 !important;
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 480px) {
+  .team-slide2 {
+    font-weight: 600 !important;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 350px) {
+  .team-slide2 {
+    font-weight: 600 !important;
+    font-size: 16px;
   }
 }
 
 
 
-.team .slide2 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: space-around;
-}
+
 
 @media (max-width: 1023px) {
   .team {
@@ -1922,11 +1945,7 @@ div#gadsf21g {
 }
 
 /*! CSS Used keyframes */
-@keyframes moveSlideshow {
-  100% {
-    transform: translateX(-50%);
-  }
-}
+
 
 /*! CSS Used fontfaces */
 @font-face {
@@ -2400,15 +2419,15 @@ div#gadsf21g {
     padding-bottom: 50px;
   }
 
-  .swiper-container:not(.hooper-list) {
-    overflow: hidden !important;
-    margin-left: -30px !important;
-    width: calc(100% + 60px);
+
+
+  .swiper-slide>img {
+    width: 100%;
   }
 
   .slideshow {
     height: auto;
-    min-height: auto !important;
+    min-height: auto;
     padding: 100px;
   }
 
@@ -2472,7 +2491,16 @@ div#gadsf21g {
   .team .arrows {
     padding-bottom: 10px;
   }
-  form{
+
+  .team-slide div img {
+    width: 100% !important;
+  }
+
+  .team-slide div {
+    width: 100% !important;
+  }
+
+  form {
     padding-bottom: 50px;
   }
 
@@ -2488,15 +2516,10 @@ div#gadsf21g {
 
   .feedback__profiles-video {
     max-width: 700px !important;
-    width: inherit !important;
   }
 
   .feedback__profiles-text {
     max-width: 700px !important;
-  }
-
-  .how {
-    padding-top: 320px !important;
   }
 
   .how h3 {
