--- a/davidStyles.css
+++ b/davidStyles.css
@@ -55,6 +55,16 @@
     font-weight: 600;
 }
 
+.team .container {
+    padding: 0 30px!important;
+}
+
+@media(min-width: 600px) {
+    .team .arrows {
+        margin-top: 20px;
+    }
+}
+
 @media(max-width: 1023px) {
     .team-slide div:nth-child(2) {
         padding: 0!important;
