--- a/section6-12.css
+++ b/section6-12.css
@@ -1,3 +1,15 @@
+body .program {
+    background: #343434;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    box-sizing: border-box;
+    justify-content: normal;
+    padding: 100px 200px 3%;
+    position: relative;
+    min-height: 70vh;
+}
+
 @media (max-width: 1035px) {
     .feedback {
         padding-bottom: 50px;
