--- a/style.css
+++ b/style.css
@@ -480,7 +480,6 @@ button:hover {
 /**/
 .free {
   height: 100%;
-  min-height: 100vh;
   box-sizing: border-box;
   padding: 3% 200px 3%;
   position: relative;
@@ -501,7 +500,7 @@ button:hover {
   line-height: 78px;
   max-width: 620px;
   color: #ffffff;
-  margin-bottom: 90px;
+  margin-bottom: 93px;
 }
 
 .free .small {
@@ -509,9 +508,8 @@ button:hover {
   font-size: 24px;
   line-height: 36px;
   color: #ffffff;
-  margin: 20px 0;
-  margin-bottom: 100px;
-  max-width: 460px;
+  margin: 0 0 67px;
+  max-width: 700px;
 }
 
 @media (max-width: 1023px) {
