--- a/style.css
+++ b/style.css
@@ -438,8 +438,8 @@ button:hover {
   position: absolute;
   top: 0;
   z-index: 0;
-  max-width: 633px;
-  max-height: 410px;
+  max-width: 822px;
+  max-height: 556px;
   right: 135px;
   width: 100%;
   height: 100%;
@@ -581,7 +581,7 @@ p {
   z-index: 0;
   max-width: 730px;
   width: 100%;
-  min-height: 368px;
+  min-height: 388px;
 }
 
 .success .white {
@@ -949,8 +949,11 @@ p {
   grid-area: txt;
 }
 
-.how__item img {
+.how__item .simpleParallax {
   grid-area: imag;
+}
+.how__item img{
+  max-width: 550px;
 }
 
 @media (max-width: 1023px) {
@@ -1672,6 +1675,10 @@ p {
   min-height: 100%;
   width: auto;
   height: auto;
+}
+
+.feedback__slider-wrp iframe{
+  height: initial;
 }
 
 /**/
