--- a/section6-12.css
+++ b/section6-12.css
@@ -5,7 +5,7 @@ body .program {
     align-items: flex-start;
     box-sizing: border-box;
     justify-content: normal;
-    padding: 100px 200px 3%;
+    padding: 150px 200px 200px;
     position: relative;
     min-height: 70vh;
 }
